# ikt111

./: .gitignore  example_connect_four.py  example_flappy.py  example_snake.py  pyproject.toml  requirements.txt  run_example.py  setup.py
birds/: birds.py  run.py
connect_four/: README.md  config.py  connect_four.py  run.py
flappy/: bird.py  config.py  evolve.py  flappy.py  run.py  utils.py
ikt111_games/: __init__.py
ikt111_games/connect_four/: README.md  config.py  connect_four.py
ikt111_games/flappy/: README.md  __init__.py  bird.py  config.py  flappy.py  utils.py
ikt111_games/snake/: README.md  config.py  run.py  snake.py  utils.py
snake/: README.md  config.py  main.py  requirements.txt  run.py  snake.py  utils.py
