[tool.poetry]
name = "ikt111"
version = "0.1.0"
description = "Software for IKT111"
authors = ["Jahn Thomas Fidje <jtfidje@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "2.0.0"
numpy = "1.19.1"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
