[tool.poetry]
name = "ikt111"
version = "0.1.0"
description = "Software for IKT111"
authors = ["Jahn Thomas Fidje <jtfidje@gmail.com>"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Windows",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "ikt111_games" }
]

[tool.poetry.dependencies]
python = "^3.6"
pygame = "2.0.0"
numpy = "1.19.1"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
